# law_office_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml
src/core/: env.py  schema.py  settings.py  urls.py
src/office/: client_schema.py  lawyer_schema.py  models.py  schema.py  tests.py
