[tool.poetry]
name = "law-office-api"
version = "0.1.0"
description = ""
authors = ["mmackowsky <maciostah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
django-environ = "^0.11.2"
graphene = "^3.3"
graphene-django = "^3.2.0"
django-graphql-jwt = "^0.4.0"
psycopg2 = "^2.9.9"
django-extensions = "^3.2.3"
psycopg2-binary = "^2.9.9"
django-graphql-auth = "0.3.16"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
